Working on small bugs

--- a/style.css
+++ b/style.css
@@ -168,9 +168,13 @@ body {
 }
 .card-container {
   min-width: 100%;
-  height: 650px;
-  padding: 4rem;
-  /* display: flex; */
+  height: 680px;
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+  align-items: center;
+  justify-content: start;
 
   /* ----- */
 }
@@ -265,7 +269,8 @@ body {
   padding: 0.1rem;
 }
 
-.submit {
+.submit,
+.play-again {
   margin-top: 10px;
   height: 80px;
   background-color: var(--purple600);
@@ -307,12 +312,6 @@ body {
 }
 
 /* --------------Quiz related */
-
-/* Utility */
-
-.hidden {
-  display: none;
-}
 
 .user-options {
   /* border: 1px solid red; */
@@ -432,4 +431,51 @@ body {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+}
+
+/* Score */
+.score-results {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 1.3rem;
+  width: 100%;
+}
+
+.score-results-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 1.5rem;
+  gap: 1rem;
+  border-radius: 24px;
+  border: none;
+  background-color: var(--blue850);
+}
+
+.score-results-container .category-img-container {
+  align-self: center;
+  display: flex;
+  gap: 1rem;
+  /* border: 1px solid red; */
+  width: 100%;
+}
+
+.score-results p {
+  color: var(--blue300);
+}
+.score-results button {
+  width: 100%;
+}
+
+.right-card {
+  padding: 0;
+}
+
+/* Utility */
+
+.hidden {
+  display: none;
 }
